4.elastic-ip.tf
# Create Resource IP depends on


resource "aws_eip" "eip" {
    instance = aws_instance.my_ec2.id
    vpc = true
    depends_on = [ aws_internet_gateway.vpc_test_igw ]
  
}
